<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.manuel.harmony.Camera.ProblemData">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:src="@drawable/climbing_wall" />

    <TextView
        android:id="@+id/problem_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/grade"
        android:layout_alignStart="@+id/grade"
        android:layout_alignTop="@+id/boudler_name"
        android:text="@string/name_problem"
        android:textColor="?attr/colorPrimary" />

    <TextView
        android:id="@+id/grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/coments"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:text="@string/grade"
        android:textColor="?attr/colorPrimary" />

    <TextView
        android:id="@+id/coments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignLeft="@+id/grade"
        android:layout_alignStart="@+id/grade"
        android:layout_marginBottom="51dp"
        android:text="@string/coment"
        android:textColor="?attr/colorPrimary" />

    <EditText
        android:id="@+id/boudler_name"
        android:layout_width="wrap_content"
        android:layout_height="25dp"

        android:layout_above="@+id/grade"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignRight="@+id/imageView2"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="200dp"
        android:layout_height="25dp"

        android:layout_alignBottom="@+id/grade"
        android:layout_alignEnd="@+id/comments"
        android:layout_alignRight="@+id/comments" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="25dp"

        android:layout_alignLeft="@+id/boudler_name"
        android:layout_alignStart="@+id/boudler_name"
        android:layout_alignTop="@+id/coments"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:onClick="upload"
        android:text="upload" />

</RelativeLayout>
