<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manuel.harmony.Camera.ProblemData">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        

        <!-- middle section body -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative_layout_top_tabs"
            android:id="@+id/relative_layout_view_pager">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="34dp"
                android:src="@drawable/climbing_wall" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/imageView2"
                android:orientation="vertical"
                android:layout_centerHorizontal="true">


                <TextView
                    android:id="@+id/problem_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/name_problem"
                    android:textColor="?attr/colorPrimary" />

                <EditText
                    android:id="@+id/boudler_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    android:layout_below="@id/problem_name"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/grade"
                    android:textColor="?attr/colorPrimary" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="200dp"
                    android:layout_height="25dp"
                    android:layout_below="@id/grade"
                    android:layout_marginTop="15dp"
                    />

                <TextView
                    android:id="@+id/coments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/coment"
                    android:textColor="?attr/colorPrimary" />

                <EditText
                    android:id="@+id/comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/coments"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="#000"
                    android:layout_marginTop="15dp"
                    />


            </LinearLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="23dp"
                android:onClick="upload"
                android:text="upload" />

        </RelativeLayout>


    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>