<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manuel.harmony.Home.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.manuel.harmony.Home.FriendsActivity"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="405dp">
                <LinearLayout
                    android:background="?colorPrimaryS"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="45dp"
                        android:src="@mipmap/ic_profile_picture" />
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Manoli Alfaro"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:textSize="21sp"/>
                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="400dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="275dp"
                    android:layout_marginLeft="50dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">
                        <LinearLayout
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title_profile_problems"
                                android:textSize="20sp"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="125"
                                android:textStyle="bold"
                                android:textSize="20sp"
                                android:paddingTop="10dp"
                                android:textColor="?colorPrimaryS"/>

                        </LinearLayout>
                        <LinearLayout
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title_profile_points"
                                android:textSize="20sp"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1205"
                                android:textStyle="bold"
                                android:textSize="20sp"
                                android:paddingTop="10dp"
                                android:textColor="?colorPrimaryS"/>

                        </LinearLayout>
                        <LinearLayout
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title_profile_repeats"
                                android:textSize="20sp"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="360"
                                android:textStyle="bold"
                                android:textSize="20sp"
                                android:paddingTop="10dp"
                                android:textColor="?colorPrimaryS"/>

                        </LinearLayout>
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="45dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@android:drawable/ic_dialog_email"/>
                    <TextView
                        android:id="@+id/text_email_profile"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="manolilaguapa@gmail.com"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@android:drawable/stat_sys_phone_call"/>
                    <TextView
                        android:textStyle="bold"

                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="+266 225 225"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@android:drawable/btn_star"/>
                    <TextView
                        android:textStyle="bold"

                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="Add to group"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@android:drawable/arrow_up_float"/>
                    <TextView
                        android:textStyle="bold"

                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="Show all comments"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:textColor="#fff"
                android:background="@drawable/profilepicture"
                android:layout_marginTop="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_profile_add_friend"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>